# flandreBot

./: .gitignore  README.md  bot.py  lgrTest.py  new-plugin  orm  pyproject.toml  start.sh
core/: __init__.py  event.py  target.py
core/matcher/: __init__.py  __init__.pyi  _commandMatcher.py  _connectMatcher.py  _errorMatcher.py  _matchers.py  _messageMatcher.py  _regexMatcher.py  _sender.py  _timerMatcher.py  exMatcher.py
corePlugins/configLoad/: __init__.py  config.py  load.py
corePlugins/pluginsLoad/: __init__.py  config.py  loader.py  repeat.py
flandre/: __init__.py  __init__.pyi  annotated.py  config.py  configLoader.py  event.py  lock.py  message.py  middleware.py  rule.py  timer.py  typing.py
flandre/init/: init.py
flandre/init/patchs/: __init__.py  matcher.py  on.py
flandre/matcher/: __init__.py  __init__.pyi  _matcherCommonImport.pyi  commandMatcher.py  commandMatcher.pyi  connectMatcher.py  connectMatcher.pyi  errorMatcher.py  errorMatcher.pyi  matchers.py  messageMatcher.py  messageMatcher.pyi  noticeMatcher.py  noticeMatcher.pyi  regexMatcher.py  regexMatcher.pyi  sender.py  timerMatcher.py  timerMatcher.pyi
flandre/pluginsLoader/: config.py  loader.py  report.py
mdStyle/qq-table/: setting.yml  style.py
plugins/ai/: __init__.py  call.py  config.py  model.py  orm.py  useAi.py
plugins/anan_say/: __init__.py  anan_say.py  config.py
plugins/dnfsAi/: __init__.py  ai.py  config.py  md.py  orm.py  useAi.py
plugins/flanImg/: __init__.py  config.py  flanImg.py  get_img.py
plugins/githubCard/: __init__.py  config.py  githubCard.py
plugins/kd/: __init__.py  config.py  kd.py
plugins/logReport/: __init__.py  config.py  logReport.py
plugins/minecraft/: __init__.py  adminManager.py  auth.py  config.py  config.pyi  forward.py  groupToMc.py  mcToGrouo.py  notice.py  orm.py  permissionCheck.py  rcon.py  useRcon.py
plugins/onlineInfo/: __init__.py  config.py  run.py
plugins/otp/: __init__.py  config.py  orm.py  otp.py
plugins/ping/: __init__.py  ping.py
plugins/rand/: __init__.py  config.py  rand.py
plugins/runManager/: __init__.py  config.py  runManager.py
plugins/screen_shot/: __init__.py  config.py  process.py  screen_shot.py
plugins/tohoschedule/: __init__.py  ad.py  flan.py  sakuya.py  yokari.py
util/: __init__.py  __init__.pyi  api.py  button.py  md.py  msg.py  rule.py
