[project]
name = "flandre"
version = "0.1.0"
description = "芙兰天下第一可爱"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "mcrcon>=0.7.0",
    "nonebot-adapter-milky>=0.3.0",
    "nonebot-adapter-minecraft>=1.5.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.58.4",
    "nonebot-plugin-exdi>=0.1.4",
    "nonebot-plugin-orm[sqlite]>=0.7.7",
    "nonebot-plugin-uninfo>=0.8.0",
    "nonebot2[httpx,websockets]>=2.4.2",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillowmd>=0.5.3",
    "pyotp>=2.9.0",
    "toml>=0.10.2",
]
